Added HTML structure and text

--- a/index.html
+++ b/index.html
@@ -2,10 +2,76 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Tea Cozy</title>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <div class="header">
+      <div class="logo">
+        <img src="resources\images\img-tea-cozy-logo.png">
+      </div>
+      <div class="navigation">
+        <li> <a href="#mission-section">Mission</a> </li>
+        <li> <a href="#featured-tea-section">Featured Tea</a> </li>
+        <li> <a href="#locations-section">Locations</a> </li>
+      </div>
+    </div>
+    <div class="mission" id="mission-section">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade Organic Tea</h4>
+    </div>
+    <div class="featured-tea" id="featured-tea-section">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+      <div class="featured-tea">
+        <img src="resources\images\img-berryblitz.jpg">
+        <h4>Fall Berry Blitz</h4>
+      </div>
+      <div class="featured-tea">
+        <img src="resources\images\img-spiced-rum.jpg">
+        <h4>Spiced Rum Tea</h4>
+      </div>
+      <div class="featured-tea">
+        <img src="resources\images\img-donut.jpg">
+        <h4>Seasonal Donuts</h4>
+      </div>
+      <div class="featured-tea">
+        <img src="resources\images\img-myrtle-ave.jpg">
+        <h4>Myrtle Ave Tea</h4>
+      </div>
+      <div class="featured-tea">
+        <img src="resources\images\img-bedford-bizarre.jpg">
+        <h4>Bedford Bizarre Tea</h4>
+      </div>
+    </div>
+    <div class="locations" id="locations-section">
+      <h2>Locations</h2>
+      <div class="specific-location-container">
+        <div class="specific-location">
+          <h3>Downtown</h3>
+          <p>384 West 4th St.</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="specific-location">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="specific-location">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+      <h5 id="copyright">copyright The Tea Cozy 2017</h5>
+    </div>
   </body>
 </html>
