Added styling for global, header, and mission sections

--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
       </div>
     </div>
     <div class="mission" id="mission-section">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade Organic Tea</h4>
+      <h2 class="mission">Our Mission</h2>
+      <h4 class="mission">Handpicked, Artisinally Curated, Free Range, Sustainable, Small Batch, Fair Trade Organic Tea</h4>
     </div>
-    <div class="featured-tea" id="featured-tea-section">
+    <div class="featured-container" id="featured-section">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
-      <div class="featured-tea">
+      <div class="featured">
         <img src="resources\images\img-berryblitz.jpg">
         <h4>Fall Berry Blitz</h4>
       </div>
-      <div class="featured-tea">
+      <div class="featured">
         <img src="resources\images\img-spiced-rum.jpg">
         <h4>Spiced Rum Tea</h4>
       </div>
-      <div class="featured-tea">
+      <div class="featured">
         <img src="resources\images\img-donut.jpg">
         <h4>Seasonal Donuts</h4>
       </div>
-      <div class="featured-tea">
+      <div class="featured">
         <img src="resources\images\img-myrtle-ave.jpg">
         <h4>Myrtle Ave Tea</h4>
       </div>
-      <div class="featured-tea">
+      <div class="featured">
         <img src="resources\images\img-bedford-bizarre.jpg">
         <h4>Bedford Bizarre Tea</h4>
       </div>
