--- a/index.html
+++ b/index.html
@@ -23,25 +23,27 @@
     <div class="featured-container" id="featured-section">
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
-      <div class="featured">
-        <img src="resources\images\img-berryblitz.jpg">
-        <h4>Fall Berry Blitz</h4>
-      </div>
-      <div class="featured">
-        <img src="resources\images\img-spiced-rum.jpg">
-        <h4>Spiced Rum Tea</h4>
-      </div>
-      <div class="featured">
-        <img src="resources\images\img-donut.jpg">
-        <h4>Seasonal Donuts</h4>
-      </div>
-      <div class="featured">
-        <img src="resources\images\img-myrtle-ave.jpg">
-        <h4>Myrtle Ave Tea</h4>
-      </div>
-      <div class="featured">
-        <img src="resources\images\img-bedford-bizarre.jpg">
-        <h4>Bedford Bizarre Tea</h4>
+      <div class="featured-individual-container">
+        <div class="featured">
+          <img src="resources\images\img-berryblitz.jpg">
+          <h4>Fall Berry Blitz</h4>
+        </div>
+        <div class="featured">
+          <img src="resources\images\img-spiced-rum.jpg">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="featured">
+          <img src="resources\images\img-donut.jpg">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="featured">
+          <img src="resources\images\img-myrtle-ave.jpg">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="featured">
+          <img src="resources\images\img-bedford-bizarre.jpg">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
       </div>
     </div>
     <div class="locations" id="locations-section">
